--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Bet you loose Java Quiz</title>
 </head>
 <body>
+    <a View Highscores</a>
+    <!-- This is a wrapper -->
+    <div id="blazers">
+        <!-- Div for timer -->
+        <div id="currentTime"></div>
+        <!-- Div for quiz content -->
+        <div id="questionsDiv">
 
 
 
