--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <a View Highscores</a>
-    <!-- This is a wrapper -->
-    <div id="blazers">
+    
+    
+    <div id="wrapper">
         <!-- Div for timer -->
         <div id="currentTime"></div>
         <!-- Div for quiz content -->
