updated html and minor js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <div id="currentTime"></div>
         <!-- Div for quiz content -->
         <div id="questionsDiv">
+            <h1>Coding Quiz Challenge</h1>
+            <p>Bet you can't answer these JavaScript questions correct within the time limit. If you dont get the aime by</p>
+            <ul id="choicesUl"></ul>
+            <!-- Buttons -->
+            <button id="startTime">Start Quiz</button>
+        </div>
+
+    </div>
 
 
 
