tweaked html, added scores

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Bet you loose Java Quiz</title>
 </head>
 <body>
+    <-- add link to file for high scores -->
     <a View Highscores</a>
     
     
