created a file for high scores. updated css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Bet you loose Java Quiz</title>
 </head>
 <body>
-    <-- add link to file for high scores -->
-    <a View Highscores</a>
+    <-- link to file for history high scores -->
+    <a href="highScores.html">View Highscores</a>
     
     
     <div id="wrapper">
@@ -20,17 +20,12 @@
             <h1>Coding Quiz Challenge</h1>
             <p>Bet you can't answer these JavaScript questions correct within the time limit. If you dont get the aime by</p>
             <ul id="choicesUl"></ul>
-            <!-- Buttons -->
+            <!-- Button -->
             <button id="startTime">Start Quiz</button>
         </div>
 
     </div>
 
-
-
-
-
-
-    <script src="./assets/script.js"></script>
+ <script src="./assets/script.js"></script>
 </body>
 </html>
