--- a/highScores.html
+++ b/highScores.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"
-    <title>Bet-You-Loose</title>
+    <title>Bet-You-Loose-Java-Quiz</title>
 </head>
 <body>
     <!-- wrapper -->
