--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <!-- Div for  content -->
         <div id="questionsDiv">
             <h1>JavaScript Quiz</h1>
-            <p>Try to answer the Following JavaScript questions correct within the time limit. If you dont get it correct, you loose points and time</p>
+            <p>Try to answer the Following JavaScript questions correct within the time limit. But guest wrong and loose points</bold></p>
             <ul id="choicesUl">
-                
+
             </ul>
-            <!-- Button -->
+            <!-- Button to begin -->
             <button id="startTime">Begin Quiz</button>
         </div>
  </div>
