--- a/highScores.html
+++ b/highScores.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css"
-    <title>Bet-You-Loose-Java-Quiz</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
     <!-- wrapper -->
@@ -17,8 +17,8 @@
             <h1>Highscores</h1>
             <ul id="highScore"></ul>
             <!-- Buttons -->
-            <button id="goBack">Go Back</button>
-            <button id="clear" value="reset">Clear Highscore</button>
+            <button id="goBack">Previous</button>
+            <button id="clear" value="reset">Reset Highscores</button>
         </div>
     </div>
     <script src="highScores.js"></script>
