--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href= "style.css"
     
-    <title>Bet-You-Loose-Java-Quiz</title>
 </head>
 
 <body>
@@ -22,12 +21,14 @@
         <!-- Div for  content -->
         <div id="questionsDiv">
             <h1>JavaScript Quiz</h1>
-            <p>Try to answer the Following JavaScript questions correct within the time limit. But guest wrong and loose points</bold></p>
+
+            <p>Try to answer the Following JavaScript questions correct within the time limit. But guest wrong and loose points</p>
+            
             <ul id="choicesUl">
 
             </ul>
             <!-- Button to begin -->
-            <button id="startTime">Begin Quiz</button>
+            <button id="startTime">Begin</button>
         </div>
  </div>
 
