--- a/highScores.html
+++ b/highScores.html
@@ -17,7 +17,7 @@
             <h1>Highscores</h1>
             <ul id="highScore"></ul>
             <!-- Buttons -->
-            <button id="goBack">Previous</button>
+            <button id="goBack">Restart</button>
             <button id="clear" value="reset">Reset Highscores</button>
         </div>
     </div>
